update title and favicon

--- a/index.html
+++ b/index.html
@@ -3,11 +3,12 @@
 
 <head>
   <link type="text/css" rel="stylesheet" href="style.css" />
-  <title>Box colors</title>
+  <link rel="icon" type="image/jpg" href="./favicon/favicon.ico" />
+  <title>ColorBox</title>
 </head>
 
 <body>
-  <h1>Box Colors</h1>
+  <h1>ColorBox</h1>
   <main id="main-container" class="main-container"></main>
   <footer>Hover your mouse over the boxes</footer>
   <script type="module" src="script.js"></script>
